# ruyi-imager

./: .gitattributes  .gitignore  AGENTS.md  PLANS.md  build.gradle.kts  settings.gradle.kts  update-manifest.local.json
.github/workflows/: nightly-release.yml  release.yml
app/: build.gradle.kts
app/src/main/java/org/glavo/ruyi/imager/: JavaFxLauncher.java  Main.java  RuyiImager.java
app/src/test/java/org/glavo/ruyi/imager/: MainTest.java
buildSrc/: build.gradle.kts
dd-flasher/: Cargo.toml  build.gradle.kts
dd-flasher/src/: main.rs  target_identity.rs
dd-flasher/src/main/java/org/glavo/ruyi/imager/dd/: DdImageWriter.java  DdOperation.java  DdProgressEvent.java  DdProgressReporter.java  FileChannelDdImageWriter.java
dd-flasher/src/test/java/org/glavo/ruyi/imager/dd/: DdImageWriterTest.java
gradle/: project.properties
gradle/wrapper/: gradle-wrapper.properties
launcher/: Cargo.toml  build.gradle.kts  build.rs
launcher/src/: gui.rs  launcher.rs  main.rs
resources/: wix-license.rtf
resources/wix/setup/: theme.xml  thm.wxl
resources/wix/setup/2052/: thm.wxl
resources/wix/setup/zh-CN/: thm.wxl
sdk/: build.gradle.kts
src/main/java/org/glavo/ruyi/imager/: Main.java  RuyiImager.java
src/main/java/org/glavo/ruyi/imager/cli/: CliApplication.java
src/main/java/org/glavo/ruyi/imager/core/: AppDirectories.java  AppServices.java  ProgressReporter.java  StrategySupport.java
src/main/java/org/glavo/ruyi/imager/gui/: GuiPreferences.java  GuiSelectionRules.java  MainWindow.java
src/main/java/org/glavo/ruyi/imager/i18n/: Messages.java
(+187 files in other folders)
