[package]
name = "dd-flasher"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[target.'cfg(target_os = "linux")'.dependencies]
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0", features = ["derive"] }
wmi = { version = "0.18.4", default-features = false }

[profile.release]
lto = "thin"
strip = "symbols"
